# firstProject

./: Docker-compose.yaml  Dockerfile  pyproject.toml
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.jsx
frontend/src/components/auth/: AuthForm.css  AuthForm.jsx
frontend/src/components/common/: Header.jsx  Loading.jsx
frontend/src/components/todos/: TodoForm.jsx  TodoItem.jsx
frontend/src/contexts/: AuthContext.jsx
frontend/src/pages/: AdminPage.css  AdminPage.jsx  Dashboard.css  Dashboard.jsx  PostsPage.css  PostsPage.jsx  ProfilePage.css  ProfilePage.jsx
frontend/src/services/: api.js  auth.js  todos.js  users.js
todo--application/: alembic.ini  main.py  prestart.sh
todo--application/api/: __init__.py
todo--application/api/apiv1/: __init__.py  admin_views.py  login_views.py  logout.py  post_views.py  priority.py  profile_views.py  register_view.py  user_views.py
todo--application/auth/: auth.py  dependencies.py
todo--application/core/: config.py
todo--application/core/cli/: assign_user_roles.py
todo--application/core/logger_settings/: logger.py
todo--application/core/middlewares/: middlewares.py
todo--application/core/models/: Post.py  Role.py  User.py  __init__.py  base.py  db_helper.py
todo--application/core/schemas/: PostSchema.py  Profile.py  UserSchema.py
todo--application/migration/: env.py
todo--application/migration/versions/: 2025_08_14_1310-2c06c5fc33ef_create_user_and_post_table.py  2025_08_18_1134-788ee27c0271_create_role_table.py  2025_08_23_1038-64fec4b7d554_update_post_table.py
(+2 files in other folders)
