[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.13.1"
fastapi = "^0.116.1"
uvicorn = {extras = ["standart"], version = "^0.35.0"}
pydantic = {extras = ["email"], version = "^2.11.7"}
pydantic-settings = "^2.10.1"
asyncpg = "^0.30.0"
alembic = "^1.16.4"
sqlalchemy = "^2.0.43"
python-jose = "^3.5.0"
bcrypt = "4.0.1"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
